--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug report 🐛
 description: Create a bug report for Hitachi Vantara UI Kit.
-labels: ['status: needs triage']
+labels: ['⌛ needs triage']
 body:
   - type: markdown
     attributes:
