--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,17 +31,16 @@ jobs:
     env:
       NODE_ENV: production
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      PUBLISH_REGISTRY: ${{ github.event.client_payload.registry }}
       CHECKOUT_REF: ${{ github.event.client_payload.ref }}
       RELEASE_TYPE: ${{ github.event.client_payload.type }}
 
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14"
 
       - name: Checkout
-        uses: actions/checkout@v2.0.0
+        uses: actions/checkout@v2
         with:
           # Pulls all commits (needed for semantic release to correctly version)
           # See https://github.com/semantic-release/semantic-release/issues/1526
@@ -52,9 +51,15 @@ jobs:
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
       - name: Install
+        env:
+          # ensure dev dependencies are installed
+          NODE_ENV: development
         run: npm ci
 
       - name: Bootstrap
+        env:
+          # ensure dev dependencies are installed
+          NODE_ENV: development
         run: npm run bootstrap
 
       - name: Publish Setup
