--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,8 +72,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
-          npm run publish-${{ env.RELEASE_TYPE }} -- --no-git-reset
-          npm run npm-publish
+          npm run publish-${{ env.RELEASE_TYPE }} -- --no-git-reset --no-verify-access
 
       - name: Get Releases Commit Message
         uses: actions/github-script@v3
