--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -24,8 +24,7 @@
     "clean": "npx del-cli dist",
     "prepublishOnly": "npm run build",
     "link": "npm link",
-    "yalc-publish": "npx yalc publish --no-scripts",
-    "publish-npm": "npm publish --access public"
+    "yalc-publish": "npx yalc publish --no-scripts"
   },
   "devDependencies": {
     "cash-cp": "^0.2.0",
