--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -33,8 +33,7 @@
     "link": "npm link",
     "lint:prettier": "npx prettier --config ../../prettier.config.js --check \"src/**/*.js\"",
     "license-check": "node ../../scripts/license-check.cjs ../../config/license-check.json",
-    "ts-check": "npx tsc -p .",
-    "publish-npm": "npm publish --access public"
+    "ts-check": "npx tsc -p ."
   },
   "peerDependencies": {
     "@hitachivantara/uikit-react-core": "^3.52.1",
