--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -15,6 +15,13 @@ body:
       options:
         - label: I have tested the latest version
           required: true
+  - type: checkboxes
+    attributes:
+      label: No Hitachi Vantara confidential content
+      description: Keep in mind this is a public repository. Do not share any information that you might even think is Hitachi Vantara confidential. Logos, references to work in progress projects, and of course, credentials. We will delete the issue immediately. 
+      options:
+        - label: I'm not including any Hitachi Vantara confidential content
+          required: true        
   - type: textarea
     attributes:
       label: Current behavior 😯
