--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -12,61 +12,61 @@ env:
   BLACKDUCK_VERSION: 7
 
 jobs:
-  CodeDxScan:
-    name: CodeDx Scan
-    runs-on: [self-hosted, Linux]
+  #  CodeDxScan:
+  #    name: CodeDx Scan
+  #    runs-on: [self-hosted, Linux]
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  #    steps:
+  #      - name: Checkout
+  #        uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "14"
+  #      - uses: actions/setup-node@v2
+  #        with:
+  #          node-version: "14"
 
-      - name: Set up Java
-        uses: actions/setup-java@v2
-        with:
-          java-version: "11"
-          distribution: "adopt"
+  #      - name: Set up Java
+  #        uses: actions/setup-java@v2
+  #        with:
+  #          java-version: "11"
+  #          distribution: "adopt"
 
-      - name: Setup dependency-check
-        uses: ./.github/setup-dependency-check
-        with:
-          version: ${{env.DEP_CHECK_TOOL_VERSION}}
+  # - name: Setup dependency-check
+  #   uses: ./.github/setup-dependency-check
+  #   with:
+  #     version: ${{env.DEP_CHECK_TOOL_VERSION}}
 
-      - name: Get uikit dependencies
-        run: |
-          npm ci
-          npm run bootstrap
-      - name: Get applitools dependencies
-        run: |
-          cd automation/applitools
-          npm ci
-      - name: Get pa11y dependencies
-        run: |
-          cd automation/pa11y
-          npm ci
+  # - name: Get uikit dependencies
+  #   run: |
+  #     npm ci
+  #     npm run bootstrap
+  # - name: Get applitools dependencies
+  #   run: |
+  #     cd automation/applitools
+  #     npm ci
+  # - name: Get pa11y dependencies
+  #   run: |
+  #     cd automation/pa11y
+  #     npm ci
 
-      - name: Run dependency check
-        run: |
-          dependency-check.sh \
-            --disableArchive \
-            --disableAssembly \
-            --disableJar \
-            --project "uikit" \
-            --format XML \
-            --scan . \
-            --out .
-        continue-on-error: true
+  # - name: Run dependency check
+  #   run: |
+  #     dependency-check.sh \
+  #       --disableArchive \
+  #       --disableAssembly \
+  #       --disableJar \
+  #       --project "uikit" \
+  #       --format XML \
+  #       --scan . \
+  #       --out .
+  #   continue-on-error: true
 
-      - name: Trigger Analysis and check results
-        uses: ./.github/codedx-analysis
-        with:
-          file: dependency-check-report.xml
-          serverUrl: ${{ secrets.CODEDX_SERVER_URL }}
-          projectId: ${{ env.CODEDX_SERVER_PROJECT_ID }}
-          key: ${{ secrets.CODEDX_TOKEN }}
+  # - name: Trigger Analysis and check results
+  #   uses: ./.github/codedx-analysis
+  #   with:
+  #     file: dependency-check-report.xml
+  #     serverUrl: ${{ secrets.CODEDX_SERVER_URL }}
+  #     projectId: ${{ env.CODEDX_SERVER_PROJECT_ID }}
+  #     key: ${{ secrets.CODEDX_TOKEN }}
 
   BlackDuckScan:
     name: BlackDuck Scan
