--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "dev": "npx lerna run dev --parallel",
     "build": "npx lerna run build",
     "build-documentation": "npx npm-run-all --npm-path npm --serial clean:docs build-documentation:storybook",
-    "build-documentation:storybook": "NODE_OPTIONS=--max_old_space_size=8192 build-storybook --docs -o dist --quiet",
-    "doc": "NODE_OPTIONS=--max_old_space_size=8192 start-storybook -p 9001 --ci --quiet --no-version-updates",
+    "build-documentation:storybook": "cross-env NODE_OPTIONS=--max_old_space_size=8192 build-storybook --docs -o dist --quiet",
+    "doc": "cross-env NODE_OPTIONS=--max_old_space_size=8192 start-storybook -p 9001 --ci --quiet --no-version-updates",
     "test": "npx lerna run test --parallel",
     "test:update": "npx lerna run test:update --parallel",
     "link": "npx lerna run link --parallel",
@@ -69,6 +69,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "cross-env": "^7.0.3",
     "del-cli": "^4.0.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
