--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "lint:root-prettier": "npx prettier --config ./prettier.config.js --check \"*.js\" \"(doc|.storybook|scripts|automation)/**/*.js\"",
     "license-check": "npx lerna run license-check",
     "ts-check": "npx lerna run ts-check --parallel",
-    "prepare": "npx husky install"
+    "prepare": "npx husky install",
+    "test:e2e": "npx playwright test"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -61,6 +62,7 @@
     "@commitlint/config-conventional": "^14.1.0",
     "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
+    "@playwright/test": "^1.20.1",
     "@storybook/addon-essentials": "6.4.12",
     "@storybook/addon-links": "6.4.12",
     "@storybook/react": "6.4.12",
