--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,11 +24,11 @@ on:
 # +----------+-------------------------+     +--------------+------------------+
 #            |                                              |
 #            |                   +-----------+--------------+
-#            |                   |           |              |                        
-#            |             +-----v----+ +----v-----+ +------v----------------+ 
-#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)| 
-#            |             +-----+----+ +----+-----+ +------+----------------+ 
-#            |                   |           |              |                         
+#            |                   |           |              |
+#            |             +-----v----+ +----v-----+ +------v----------------+
+#            |             |A11Y-Tests| |Applitools| |Robot (chrome, firefox)|
+#            |             +-----+----+ +----+-----+ +------+----------------+
+#            |                   |           |              |
 #            +-------------------+-----+-----+--------------+
 #                                      |
 #                   +----------+       |        +-------+
@@ -243,6 +243,57 @@ jobs:
         run: |
           rm -rf ${{ github.workspace }}/dist
 
+  Playwright:
+    name: Playwright test
+    needs: [Build-Storybook-V3-Store]
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+
+    services:
+      storybook:
+        image: nginx
+        ports:
+          - 9001:80
+        volumes:
+          - ${{ github.workspace }}/dist:/usr/share/nginx/html
+        options: >-
+          --name storybook
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Fetch Storybook
+        uses: actions/download-artifact@v2
+        with:
+          name: storybook-v2
+          path: ${{ github.workspace }}/dist
+
+      - name: Restart nginx
+        uses: docker://docker
+        with:
+          args: docker restart storybook
+
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npm run test:e2e
+        env:
+          PLAYWRIGHT_TEST_BASE_URL: http://storybook
+
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
   Robot:
     name: Test Robot
     needs: [Build-Storybook-V3-Store]
@@ -303,7 +354,7 @@ jobs:
 
   Notify-End-Internal:
     name: Notify End Internal
-    needs: [Static-Checks, A11Y-Tests, Applitools, Robot]
+    needs: [Static-Checks, A11Y-Tests, Applitools, Robot, Playwright]
     if: failure()
     runs-on: ubuntu-latest
 
