--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,7 +41,7 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
-    "plotly.js-basic-dist": "^1.55.2",
+    "plotly.js-basic-dist": "^1.55.2 || ^2.11.1",
     "react": "^16.13.1 || ^17.0.0",
     "react-dom": "^16.13.1 || ^17.0.0"
   },
