chore: upgrade node/npm to LTS 16.x.x/8.x.x versions

--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "husky": "^7.0.0",
     "lerna": "^3.22.1",
     "license-checker": "^25.0.1",
-    "monaco-editor": "0.20.0",
-    "monaco-editor-webpack-plugin": "1.9.1",
+    "monaco-editor": "^0.31.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "plotly.js-basic-dist": "^2.11.1",
     "prettier": "^2.4.1",
@@ -105,7 +105,7 @@
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-hook-form": "^7.19.5",
-    "react-monaco-editor": "0.36.0",
+    "react-monaco-editor": "^0.47.0",
     "react-resize-aware": "^3.1.1",
     "spdx-correct": "^3.1.1",
     "spdx-satisfies": "^5.0.1",
