--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -38,9 +38,9 @@
   "peerDependencies": {
     "@hitachivantara/uikit-react-core": "^3.52.1",
     "@material-ui/core": "^4.12.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-monaco-editor": "^0.36.0"
+    "react": "^16.13.1 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
+    "react-monaco-editor": "^0.47.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
