build: include build process with static checks

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Bootstrap
         run: npm run bootstrap
 
+      - name: Build
+        run: npm run build
+
       - name: License Check
         run: npm run license-check
 
