--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -57,6 +57,9 @@ jobs:
 
       - name: Bootstrap
         run: npm run bootstrap
+      
+      - name: Build
+        run: npm run build
 
       - name: License Check
         run: npm run license-check
