--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -64,6 +64,8 @@
     "notistack": "^1.0.10",
     "popper-max-size-modifier": "^0.2.0",
     "prop-types": "^15.8.1",
+    "rc-slider": "10.0.0",
+    "rc-tooltip": "^3.7.3",
     "react-debounce-render": "^7.0.0",
     "react-outside-click-handler": "^1.3.0",
     "react-plotly.js": "^2.5.1",
