--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
     "@playwright/test": "^1.20.1",
-    "@storybook/addon-essentials": "6.4.12",
-    "@storybook/addon-links": "6.4.12",
-    "@storybook/react": "6.4.12",
+    "@storybook/addon-docs": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "0.0.8",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
