--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -20,13 +20,14 @@
     "dev:watch": "npx watch \"npm run build\" ./src/",
     "build": "npx npm-run-all --npm-path npm clean build:*",
     "build:to-scss": "json-to-scss \"src/*.*\" dist",
-    "build:to-json": "npx cpx 'src/*.json' dist",
+    "build:to-json": "npx cpy-cli 'src/*.json' dist",
     "clean": "npx del-cli dist",
     "prepublishOnly": "npm run build",
     "link": "npm link",
     "yalc-publish": "npx yalc publish --no-scripts"
   },
   "devDependencies": {
+    "cpy-cli": "^4.1.0",
     "del-cli": "^4.0.1",
     "json-to-scss": "file:lib/json-to-scss.tgz",
     "npm-run-all": "^4.1.5",
